fix(ui5-shellbar): align logo vertically to middle (#12685)

--- a/packages/fiori/src/themes/ShellBar.css
+++ b/packages/fiori/src/themes/ShellBar.css
@@ -485,6 +485,7 @@ slot[name="profile"] {
 
 ::slotted([slot="logo"]) {
 	max-height: 2rem;
+	vertical-align: middle;
 }
 
 ::slotted([slot="logo"]):active {
