--- a/packages/fiori/src/themes/ShellBarBranding.css
+++ b/packages/fiori/src/themes/ShellBarBranding.css
@@ -68,6 +68,7 @@
 ::slotted([slot="logo"]) {
 	max-height: 2rem;
 	padding-inline: 0.25rem;
+	vertical-align: middle;
 }
 
 ::slotted([slot="logo"]):active {
